integrate componentMap into MDX components

--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -1,3 +1,5 @@
+import { Button } from '../components/button'
+
 # Calls for Action
 
 ## Calls for Presentations
@@ -15,7 +17,7 @@ These talks should show active FABRIC experiment views and results. For planned 
 Submissions are due July 15 via our [submission form](https://docs.google.com/forms/d/1x-JXFHXTNgN6-wkqcoBcnFNAvkPdRSCIrX_poPTXazw/viewform?edit_requested=true).
 
 <div class="button-container">
-<button linkto="https://docs.google.com/forms/d/1x-JXFHXTNgN6-wkqcoBcnFNAvkPdRSCIrX_poPTXazw/viewform?edit_requested=true">Call for Presentations</button>
+<Button linkto="https://docs.google.com/forms/d/1x-JXFHXTNgN6-wkqcoBcnFNAvkPdRSCIrX_poPTXazw/viewform?edit_requested=true">Call for Presentations</Button>
 </div>
 
 For more questions, email [Chelsea Davis](mailto:cdavis@renci.org)
