--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -1,3 +1,5 @@
+import { Button } from '../components/button'
+
 # KNIT 9
 
 ## Registration is Open!
@@ -12,8 +14,8 @@ See what [travel accommodations](/travel) are available,
 and [register now](/registration)!
 
 <div class="button-container">
-<button linkto="/registration">Register Now</button>
-<button linkto="/cfa">Calls for Action</button>
+<Button linkto="/registration">Register Now</Button>
+<Button linkto="/cfa">Calls for Action</Button>
 </div>
 
 ##### Funding Details
