--- a/src/content/registration.mdx
+++ b/src/content/registration.mdx
@@ -1,3 +1,5 @@
+import { Button } from '../components/button'
+
 # Registration
 
 ## When
@@ -16,5 +18,5 @@ Kansas City, MO
 *Please also stay the rest of the week for the MERIF Workshop. You can find the pricing information for MERIF on the registration link below.*
 
 <div class="button-container">
-<button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=C2B2">Register Now</button>
+<Button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=C2B2">Register Now</Button>
 </div>
