--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -1,3 +1,5 @@
+import { Button } from '../components/button'
+
 # Travel
 
 ## Hotel Block
@@ -11,7 +13,7 @@ September 4 is the last day to reserve your room as part of the hotel block. Our
 Reservations can be made at the [hotel website](https://www.marriott.com/event-reservations/reservation-link.mi?id=1717098427388&key=GRP&app=resvlink).
 
 <div class="button-container">
-<button linkto="https://www.marriott.com/event-reservations/reservation-link.mi?id=1717098427388&key=GRP&app=resvlink">Hotel Block Booking</button>
+<Button linkto="https://www.marriott.com/event-reservations/reservation-link.mi?id=1717098427388&key=GRP&app=resvlink">Hotel Block Booking</Button>
 </div>
 
 ## Travel Stipends
