add event venue address

--- a/src/content/registration.mdx
+++ b/src/content/registration.mdx
@@ -9,7 +9,9 @@ import { Button } from '../components/button'
 
 ## Where
 
-Kansas City, MO
+UMKC Student Union
+
+5100 Cherry Street, Kansas City, MO 64110
 
 ## Cost
 
