--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -2,6 +2,12 @@ import { Button } from '../components/button'
 
 # Travel
 
+## Event Location
+
+UMKC Student Union
+
+5100 Cherry Street, Kansas City, MO 64110
+
 ## Hotel Block
 
 September 4, 2024 is the last day to reserve your room as part of the hotel block. Our team has reserved a hotel block from the evening of Monday September 23 through checkout on Friday September 27 at the Residence Inn.
