--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -1,11 +1,9 @@
 import { Button } from '../components/button'
 
-# KNIT 9
+# KNIT 9 | September 24 - 27, 2024
 
 ## Registration is Open!
 
-September 24 - 27, 2024 | Kansas City, MO
- 
 KNIT 9, the next FABRIC Community Workshop, will take place September 24, 2024 in Kansas City, MO, and will be co-located with the MERIF Workshop. The workshop will include small-group, hands-on FABRIC tutorial sessions and advanced training topics. During the event, experimenters across multiple science domains will highlight their use of FABRIC to push forward compelling experiments. The FABRIC team will set the stage for the future of FABRIC and solicit feedback from fellow participants during talks and open mic sessions.
 
 The last day to register is _Monday, September 2, 2024_.
@@ -17,6 +15,12 @@ and [register now](/registration)!
 <Button linkto="/registration">Register Now</Button>
 <Button linkto="/cfa">Calls for Action</Button>
 </div>
+
+## Event Venue
+
+> UMKC Student Union
+
+> 5100 Cherry Street, Kansas City, MO 64110
 
 ##### Funding Details
 
