add sections and buttons for speaker directory and info packet

--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -22,6 +22,22 @@ and [register now](/registration)!
 
 > 5100 Cherry Street, Kansas City, MO 64110
 
+## Speaker Directory
+
+To learn more about the presenters that will be at KNIT9, follow the link below for the Speaker Directory.
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/document/d/15uAuJdMwE65v5_Rmm5KyYSt_511GbL2ScN89DzCLNtg/preview">KNIT9 Speaker Directory</Button>
+</div>
+
+## Information Packet
+
+The KNIT 9 Information Packet serves as your one-stop-shop for all links and materials you will need for the workshop.
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/document/d/1br31OkgPGS_75dzI7xZE9e2AVOQbWqo5lyFbT-7YMhM/preview">KNIT9 Information Packet</Button>
+</div>
+
 ##### Funding Details
 
 FABRIC is funded by NSF grants CNS-1935966, CNS-2029176, CNS-2029200, CNS-2029235, CNS-2029260, CNS-2029261 and CNS-2330891.
