--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -2,7 +2,7 @@ import { Button } from '../components/button'
 
 # KNIT 9 | September 24 - 27, 2024
 
-## Registration is Open!
+***This Event Has Concluded***
 
 KNIT 9, the next FABRIC Community Workshop, will take place September 24, 2024 in Kansas City, MO, and will be co-located with the MERIF Workshop. The workshop will include small-group, hands-on FABRIC tutorial sessions and advanced training topics. During the event, experimenters across multiple science domains will highlight their use of FABRIC to push forward compelling experiments. The FABRIC team will set the stage for the future of FABRIC and solicit feedback from fellow participants during talks and open mic sessions.
 
