--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -1,6 +1,6 @@
 import { Button } from '../components/button'
 
-# KNIT 9 | September 24 - 27, 2024
+# KNIT 9 | September 24, 2024
 
 ***This Event Has Concluded***
 
