--- a/src/content/registration.mdx
+++ b/src/content/registration.mdx
@@ -4,7 +4,7 @@ import { Button } from '../components/button'
 
 ## When
 
-- Workshop: Tuesday, September 24 - Friday, September 27, 2024
+- Workshop: Tuesday, September 24, 2024
 - Registration deadline: Monday, September 2, 2024
 
 ## Where
