--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -1,21 +1,19 @@
 import { Button } from '../components/button'
 
-# KNIT 9 | September 24, 2024
+# KNIT 10 | March 11 - 12, 2025
 
-***This Event Has Concluded***
+Join us for KNIT 10, the next FABRIC Community Workshop, taking place March 11-12, 2025, in Chapel Hill, NC!
 
-Please help us improve the KNIT workshop experience by filling out this short feedback survey. Your answers will be anonymous unless you choose to provide your contact information.
+This engaging two-day event offers a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
 
-<div class="button-container">
-<Button linkto="http://bit.ly/KNIT9_Feedback">KNIT9 Feedback Survey</Button>
-</div>
+**Event Highlights:**
+- Hands-On FABRIC Tutorials: Participate in small-group sessions tailored for both newcomers and experienced users.
+- Advanced Training Topics: Explore in-depth technical content to enhance your expertise.
+- Plenary Sessions: Gain insights from expert presentations and open discussions.
+- Experiment Showcases: Discover how scientists from diverse fields are leveraging FABRIC to drive groundbreaking research.
+- Open Mic Sessions: Share your feedback and ideas to shape FABRIC's future development.
 
-KNIT 9, the next FABRIC Community Workshop, will take place September 24, 2024 in Kansas City, MO, and will be co-located with the MERIF Workshop. The workshop will include small-group, hands-on FABRIC tutorial sessions and advanced training topics. During the event, experimenters across multiple science domains will highlight their use of FABRIC to push forward compelling experiments. The FABRIC team will set the stage for the future of FABRIC and solicit feedback from fellow participants during talks and open mic sessions.
-
-The last day to register is _Monday, September 2, 2024_.
-Previous KNIT attendees and students are eligible to receive discounted pricing.
-See what [travel accommodations](/travel) are available,
-and [register now](/registration)!
+Don't miss this chance to explore practical applications, network with the community, and be part of the evolution of FABRIC!
 
 <div class="button-container">
 <Button linkto="/registration">Register Now</Button>
@@ -24,25 +22,9 @@ and [register now](/registration)!
 
 ## Event Venue
 
-> UMKC Student Union
+> Friday Center  
 
-> 5100 Cherry Street, Kansas City, MO 64110
-
-## Speaker Directory
-
-To learn more about the presenters that will be at KNIT9, follow the link below for the Speaker Directory.
-
-<div class="button-container">
-<Button linkto="https://docs.google.com/document/d/15uAuJdMwE65v5_Rmm5KyYSt_511GbL2ScN89DzCLNtg/preview">KNIT9 Speaker Directory</Button>
-</div>
-
-## Information Packet
-
-The KNIT 9 Information Packet serves as your one-stop-shop for all links and materials you will need for the workshop.
-
-<div class="button-container">
-<Button linkto="https://docs.google.com/document/d/1br31OkgPGS_75dzI7xZE9e2AVOQbWqo5lyFbT-7YMhM/preview">KNIT9 Information Packet</Button>
-</div>
+> 100 Friday Center Dr, Chapel Hill, NC 27517
 
 ##### Funding Details
 
