--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -4,32 +4,30 @@ import { Button } from '../components/button'
 
 ## Event Location
 
-UMKC Student Union
+> Friday Center  
 
-5100 Cherry Street, Kansas City, MO 64110
+> 100 Friday Center Dr, Chapel Hill, NC 27517
 
 ## Hotel Block
 
-September 4, 2024 is the last day to reserve your room as part of the hotel block. Our team has reserved a hotel block from the evening of Monday September 23 through checkout on Friday September 27 at the Residence Inn.
+**February 8, 2025** is the last day to reserve your room as part of the hotel block.
 
-> Residence Inn
+> Courtyard Chapel Hill 
 
-> 4601 Broadway Blvd, Kansas City, MO 64112
+> 100 Marriott Way, Chapel Hill, NC 27517
 
-Reservations can be made at the [hotel website](https://www.marriott.com/event-reservations/reservation-link.mi?id=1717098427388&key=GRP&app=resvlink).
+Reservations can be made at the [hotel website](https://www.marriott.com/event-reservations/reservation-link.mi?id=1735848507689&key=GRP&guestreslink2=true&app=resvlink).
 
 <div class="button-container">
-<Button linkto="https://www.marriott.com/event-reservations/reservation-link.mi?id=1717098427388&key=GRP&app=resvlink">Hotel Block Booking</Button>
+<Button linkto="https://www.marriott.com/event-reservations/reservation-link.mi?id=1735848507689&key=GRP&guestreslink2=true&app=resvlink">Hotel Block Booking</Button>
 </div>
 
-## Travel Stipends
+## Travel Stipend
 
-Travel grant applications will be evaluated on there ability to increase the diversity of the KNIT conference through ...
+The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-1.  A wide range of institutions and organizations,
-2.  Providing opportunities for attendees to contribute ideas, share expertise, and receive training, and
-3.  The applicants ability to stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
+**The deadline for applications is Friday February 7 @ 11:59 PM ET**
 
-Important Note: In order to receive travel grant reimbursements, you are required to serve as an active note taker during the FABRIC KNIT Workshop sessions and fill out a feedback survey provided after the workshop. Should you be awarded, you will be given additional instructions for your note taking assignment.
-
-***Application form is now closed.***
+<div class="button-container">
+<Button linkto="https://forms.gle/TYZAd6WPCDr2nnvm8">Apply Now!</Button>
+</div>
