--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -2,29 +2,12 @@ import { Button } from '../components/button'
 
 # Calls for Action  
 
-Please help us improve the KNIT workshop experience by filling out this short feedback survey. Your answers will be anonymous unless you choose to provide your contact information.
+## Calls for Demos
+
+Showcase your innovative projects at KNIT10's Demo Night! Share the work you've been developing by filling out the form to be considered for a presentation. 
 
 <div class="button-container">
-<Button linkto="http://bit.ly/KNIT9_Feedback">KNIT9 Feedback Survey</Button>
-</div>
-
-
-## Calls for Presentations
-Call for Lightning Talks
-
-KNIT9 attendees have the opportunity to present lightning talks on the following topics:
-
-1.  Enabling experimentation in various science domains
-2.  Getting started with FABRIC -- Unique features, useful tricks, sharable services
-3.  Experiments across FABRIC and other testbeds
-4.  Propose a compelling new topic
-
-These talks should show active FABRIC experiment views and results. For planned experiments, we encourage presenting planned topology and resources (FABRIC and other) as specific as possible.
-
-Submissions are due July 15 via our [submission form](https://docs.google.com/forms/d/1x-JXFHXTNgN6-wkqcoBcnFNAvkPdRSCIrX_poPTXazw/viewform?edit_requested=true).
-
-<div class="button-container">
-<Button linkto="https://docs.google.com/forms/d/1x-JXFHXTNgN6-wkqcoBcnFNAvkPdRSCIrX_poPTXazw/viewform?edit_requested=true">Call for Presentations</Button>
+<Button linkto="https://forms.gle/sMvmns92RJUcjGsD9">Call for Demos</Button>
 </div>
 
 For more questions, email [Chelsea Davis](mailto:cdavis@renci.org)
