--- a/src/content/registration.mdx
+++ b/src/content/registration.mdx
@@ -4,21 +4,31 @@ import { Button } from '../components/button'
 
 ## When
 
-- Workshop: Tuesday, September 24, 2024
-- Registration deadline: Monday, September 2, 2024
+- Workshop: FABRIC KNIT10 | March 11-12, 2025
+- Registration deadline: Register by February 28, 2025 
 
 ## Where
 
-UMKC Student Union
+> Friday Center  
 
-5100 Cherry Street, Kansas City, MO 64110
+> 100 Friday Center Dr, Chapel Hill, NC 27517
 
 ## Cost
 
-- **Full KNIT-Only Registration**: $70
-
-*Please also stay the rest of the week for the MERIF Workshop. You can find the pricing information for MERIF on the registration link below.*
+- Full registration: $200
+- Student: $100
+- Previous KNIT attendee: $150
 
 <div class="button-container">
-<Button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=C2B2">Register Now</Button>
+<Button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=C558">Register Now</Button>
+</div>
+
+## Travel Stipend
+
+The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
+
+**The deadline for applications is Friday February 7 @ 11:59 PM ET**
+
+<div class="button-container">
+<Button linkto="https://forms.gle/TYZAd6WPCDr2nnvm8">Apply Now!</Button>
 </div>
