update contact info from chelsea to jessica n.

--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -10,4 +10,4 @@ Showcase your innovative projects at KNIT10's Demo Night! Share the work you've 
 <Button linkto="https://forms.gle/sMvmns92RJUcjGsD9">Call for Demos</Button>
 </div>
 
-For more questions, email [Chelsea Davis](mailto:cdavis@renci.org)
+For more questions, email [Jessica Natonick](mailto:jnatonick@renci.org)
