#51: added workshop materials to the homepage

--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -1,4 +1,4 @@
-import { Button } from '../components/button'
+import { Button } from "../components/button";
 
 # KNIT 10 | March 11 - 12, 2025
 
@@ -7,6 +7,7 @@ Join us for KNIT 10, the next FABRIC Community Workshop, taking place March 11-1
 This engaging two-day event offers a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
 
 **Event Highlights:**
+
 - Hands-On FABRIC Tutorials: Participate in small-group sessions tailored for both newcomers and experienced users.
 - Advanced Training Topics: Explore in-depth technical content to enhance your expertise.
 - Plenary Sessions: Gain insights from expert presentations and open discussions.
@@ -16,13 +17,21 @@ This engaging two-day event offers a dynamic mix of activities designed to deepe
 Don't miss this chance to explore practical applications, network with the community, and be part of the evolution of FABRIC!
 
 <div class="button-container">
-<Button linkto="/registration">Register Now</Button>
-<Button linkto="/cfa">Calls for Action</Button>
+  <Button linkto="/registration">Register Now</Button>
+  <Button linkto="/cfa">Calls for Action</Button>
+</div>
+
+## Information Packet
+
+Stay up to date with everything KNIT10! Our Information Packet is a living document with key details, updates, and guidelines to help you navigate the workshop. Since we’re always adding new information, check back regularly for the latest updates. Click below to access the packet and stay informed!
+
+<div class="button-container">
+  <Button linkto="https://docs.google.com/document/d/1LlYbh9hTWC-QYtCEy64F5QBY3F735__jtPHsvPGXN3o/edit?tab=t.0">KNIT10 Information Packet</Button>
 </div>
 
 ## Event Venue
 
-> Friday Center  
+> Friday Center
 
 > 100 Friday Center Dr, Chapel Hill, NC 27517
 
