--- a/src/content/past-knits/knit9.mdx
+++ b/src/content/past-knits/knit9.mdx
@@ -1,19 +1,22 @@
-import { Button } from '@components/button'
-import knit9logo from '@images/KNIT9-logo.png'
+import { Button } from "@components/button";
+import knit9logo from "@images/KNIT9-logo.png";
 
 # KNIT 9 | September 24, 2024
 
 ## Event Information
+
 KNIT 9, the next FABRIC Community Workshop, took place September 24, 2024 in Kansas City, MO, and will be co-located with the MERIF Workshop. The workshop will include small-group, hands-on FABRIC tutorial sessions and advanced training topics. During the event, experimenters across multiple science domains will highlight their use of FABRIC to push forward compelling experiments. The FABRIC team will set the stage for the future of FABRIC and solicit feedback from fellow participants during talks and open mic sessions.
+
 > UMKC Student Union
 
 > 5100 Cherry Street, Kansas City, MO 64110
 
 ## Speaker Directory
+
 To learn more about the presenters at KNIT9, follow the link below for the Speaker Directory.
 
 <div class="button-container">
-<Button linkto="https://docs.google.com/document/d/15uAuJdMwE65v5_Rmm5KyYSt_511GbL2ScN89DzCLNtg/preview">KNIT9 Speaker Directory</Button>
+  <Button linkto="https://docs.google.com/document/d/15uAuJdMwE65v5_Rmm5KyYSt_511GbL2ScN89DzCLNtg/preview">KNIT9 Speaker Directory</Button>
 </div>
 
 ## Information Packet
@@ -21,13 +24,13 @@ To learn more about the presenters at KNIT9, follow the link below for the Speak
 The KNIT 9 Information Packet serves as your one-stop-shop for all links and materials you will need for the workshop.
 
 <div class="button-container">
-<Button linkto="https://docs.google.com/document/d/1br31OkgPGS_75dzI7xZE9e2AVOQbWqo5lyFbT-7YMhM/preview">KNIT9 Information Packet</Button>
+  <Button linkto="https://docs.google.com/document/d/1br31OkgPGS_75dzI7xZE9e2AVOQbWqo5lyFbT-7YMhM/preview">KNIT9 Information Packet</Button>
 </div>
 
 ## Agenda
 
 <div class="button-container">
-<Button linkto="https://docs.google.com/document/d/1br31OkgPGS_75dzI7xZE9e2AVOQbWqo5lyFbT-7YMhM/preview">KNIT9 Information Packet</Button>
+  <Button linkto="https://docs.google.com/document/d/1br31OkgPGS_75dzI7xZE9e2AVOQbWqo5lyFbT-7YMhM/preview">KNIT9 Information Packet</Button>
 </div>
 
 ##### Funding Details
