--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -10,7 +10,7 @@ import { Button } from '../components/button'
 
 ## Hotel Block
 
-**February 8, 2025** is the last day to reserve your room as part of the hotel block.
+**The Hotel Block is now closed.
 
 > Courtyard Chapel Hill 
 
@@ -26,7 +26,7 @@ Reservations can be made at the [hotel website](https://www.marriott.com/event-r
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-**The deadline for applications is Friday February 7 @ 11:59 PM ET**
+**The Travel Stipend is now closed**
 
 <div class="button-container">
 <Button linkto="https://forms.gle/TYZAd6WPCDr2nnvm8">Apply Now!</Button>
