updated knit 10 travel information

--- a/src/content/registration.mdx
+++ b/src/content/registration.mdx
@@ -27,8 +27,4 @@ import { Button } from '../components/button'
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-**The deadline for applications is Friday February 7 @ 11:59 PM ET**
-
-<div class="button-container">
-<Button linkto="https://forms.gle/TYZAd6WPCDr2nnvm8">Apply Now!</Button>
-</div>
+**The Travel Stipend is now closed.**
