#60: added knit feedback form to the homepage

--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -2,6 +2,8 @@ import { Button } from "../components/button";
 
 # KNIT 10 | March 11 - 12, 2025
 
+<em>This event has concluded. The FABRIC KNIT 10 Feedback Form can be found <b>[here](https://bit.ly/KNIT10_FeedbackSurvey)</b>.</em>
+
 Join us for KNIT 10, the next FABRIC Community Workshop, taking place March 11-12, 2025, in Chapel Hill, NC!
 
 This engaging two-day event offers a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
