removed KNIT 10 content and replaced with 'coming soon'.

--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -1,10 +1,8 @@
 import { Button } from "../components/button";
 
-# KNIT 10 | March 11 - 12, 2025
+# KNIT | October 14-15, 2025
 
-<em>This event has concluded. The FABRIC KNIT 10 Feedback Form can be found <b>[here](https://bit.ly/KNIT10_FeedbackSurvey)</b>.</em>
-
-Join us for KNIT 10, the next FABRIC Community Workshop, taking place March 11-12, 2025, in Chapel Hill, NC!
+Join us for KNIT, the next FABRIC Community Workshop, taking place October 14-15, 2025!
 
 This engaging two-day event offers a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
 
@@ -18,16 +16,11 @@ This engaging two-day event offers a dynamic mix of activities designed to deepe
 
 Don't miss this chance to explore practical applications, network with the community, and be part of the evolution of FABRIC!
 
-<div class="button-container">
-  <Button linkto="/registration">Register Now</Button>
-  <Button linkto="/cfa">Calls for Action</Button>
-</div>
+***Registration coming soon.***
 
 ## Event Venue
 
-> Friday Center
-
-> 100 Friday Center Dr, Chapel Hill, NC 27517
+***Details coming soon.***
 
 ##### Funding Details
 
