--- a/src/content/registration.mdx
+++ b/src/content/registration.mdx
@@ -4,14 +4,12 @@ import { Button } from '../components/button'
 
 ## When
 
-- Workshop: FABRIC KNIT10 | March 11-12, 2025
-- Registration deadline: Register by February 28, 2025 
+- Workshop: FABRIC KNIT | October 14-15, 2025
+- ***Registration coming soon.***
 
 ## Where
 
-> Friday Center  
-
-> 100 Friday Center Dr, Chapel Hill, NC 27517
+***Details coming soon.***
 
 ## Cost
 
@@ -19,12 +17,8 @@ import { Button } from '../components/button'
 - Student: $100
 - Previous KNIT attendee: $150
 
-<div class="button-container">
-<Button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=C558">Register Now</Button>
-</div>
-
 ## Travel Stipend
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-**The Travel Stipend is now closed.**
+***Travel stipend application coming soon.***
