--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -4,30 +4,14 @@ import { Button } from '../components/button'
 
 ## Event Location
 
-> Friday Center  
-
-> 100 Friday Center Dr, Chapel Hill, NC 27517
+***Coming soon.***
 
 ## Hotel Block
 
-**The Hotel Block is now closed.**
-
-> Courtyard Chapel Hill 
-
-> 100 Marriott Way, Chapel Hill, NC 27517
-
-Reservations can be made at the [hotel website](https://www.marriott.com/event-reservations/reservation-link.mi?id=1735848507689&key=GRP&guestreslink2=true&app=resvlink).
-
-<div class="button-container">
-<Button linkto="https://www.marriott.com/event-reservations/reservation-link.mi?id=1735848507689&key=GRP&guestreslink2=true&app=resvlink">Hotel Block Booking</Button>
-</div>
+***More information coming soon.***
 
 ## Travel Stipend
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-**The Travel Stipend is now closed.**
-
-<div class="button-container">
-<Button linkto="https://forms.gle/TYZAd6WPCDr2nnvm8">Apply Now!</Button>
-</div>
+***Travel Stipend application coming soon.***
