moved KNIT 10 to the past workshop pages

--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -8,4 +8,4 @@ Showcase your innovative projects at KNIT's Demo Night! Share the work you've be
 
 ***Call for Demo form coming soon.***
 
-For more questions, email [Carolena Charalambous](mailto:lena@renci.org)
+For more questions, email [Chelsea Davis](mailto:cdavis@renci.org)
