updated workshop details for KNIT 11

--- a/src/content/registration.mdx
+++ b/src/content/registration.mdx
@@ -5,11 +5,18 @@ import { Button } from '../components/button'
 ## When
 
 - Workshop: FABRIC KNIT | October 14-15, 2025
-- ***Registration coming soon.***
+
+<div class="button-container">
+<Button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=C954">Register Now</Button>
+</div>
 
 ## Where
 
-***Details coming soon.***
+> University Guest House & Conference Center
+
+> 100 South Fort Douglas Blvd.
+
+> Salt Lake City, UT 84113
 
 ## Cost
 
@@ -21,4 +28,8 @@ import { Button } from '../components/button'
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-***Travel stipend application coming soon.***
+**The deadline for applications is Friday August 29 @ 11:59 PM ET**
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/forms/d/1cj-fh51Og9yWQo83RAALcA2wdyUW7HZzxsj79--lzdQ/viewform?edit_requested=true">Apply Now!</Button>
+</div>
