--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -16,11 +16,19 @@ This engaging two-day event offers a dynamic mix of activities designed to deepe
 
 Don't miss this chance to explore practical applications, network with the community, and be part of the evolution of FABRIC!
 
-***Registration coming soon.***
+<div class="button-container">
+<Button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=C954">Register Now</Button>
+</div>
 
 ## Event Venue
 
-***Details coming soon.***
+> University Guest House & Conference Center
+
+> 100 South Fort Douglas Blvd.
+
+> Salt Lake City, UT 84113
+
+--- 
 
 ##### Funding Details
 
