--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -4,14 +4,34 @@ import { Button } from '../components/button'
 
 ## Event Location
 
-***Coming soon.***
+> University Guest House & Conference Center
+
+> 100 South Fort Douglas Blvd.
+
+> Salt Lake City, UT 84113
 
 ## Hotel Block
 
-***More information coming soon.***
+> University Guest House & Conference Center
+
+> 100 South Fort Douglas Blvd.
+
+> Salt Lake City, UT 84113
+
+Visit the hotel link and type in the offer code **BKG311** to access the KNIT block.
+
+**Please note: If you have been approved for a KNIT travel reimbursement, you must use the hotel block to be reimbursed for lodging.**
+
+<div class="button-container">
+<Button linkto="https://book.rguest.com/onecart/wbe/offers/1967/UniversityofUtah?offerCode=BKG311">Hotel Link</Button>
+</div>
 
 ## Travel Stipend
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-***Travel Stipend application coming soon.***
+**The deadline for applications is Friday August 29 @ 11:59 PM ET**
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/forms/d/1cj-fh51Og9yWQo83RAALcA2wdyUW7HZzxsj79--lzdQ/viewform?edit_requested=true">Apply Now!</Button>
+</div>
