updated workshop materials page

--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -1,8 +1,8 @@
 import { Button } from "../components/button";
 
-# KNIT | October 14-15, 2025
+# KNIT 11 | October 14-15, 2025
 
-Join us for KNIT, the next FABRIC Community Workshop, taking place October 14-15, 2025!
+Join us for KNIT 11, the next FABRIC Community Workshop, taking place October 14-15, 2025!
 
 This engaging two-day event offers a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
 
