--- a/src/content/workshop.mdx
+++ b/src/content/workshop.mdx
@@ -2,4 +2,18 @@ import { Button } from "../components/button";
 
 # Workshop Materials
 
-***Workshop materials coming soon.***
+## Information Packet
+
+Stay up to date with everything KNIT 11! Our Information Packet is a living document with key details, updates, and guidelines to help you navigate the workshop. Since we’re always adding new information, check back regularly for the latest updates. Click below to access the packet and stay informed!
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/document/d/1N-akqwqhAmuzNBpkUOST1Hs4X4-GdwujCzjZ1O-d5qo/edit?tab=t.0">Information Packet</Button>
+</div>
+
+## Speaker Directory
+
+Learn about the KNIT 11 speakers and their expertise in networking, computing, and research. See how their work connects with FABRIC and experimental infrastructure.
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/document/d/1NgnfA4ywF_NN1RiZpyen-CWtiDbt-m8hS9wCSUhCIQ0/edit?tab=t.0">Speaker Directory</Button>
+</div>
