updated knit 11 information

--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -18,7 +18,7 @@ import { Button } from '../components/button'
 
 > Salt Lake City, UT 84113
 
-Visit the hotel link and type in the offer code **BKG311** to access the KNIT block.
+Visit the hotel link and type in the offer code **BKG311** to access the KNIT block. <b>The deadline to book within the hotel block is September 14.</b>
 
 **Please note: If you have been approved for a KNIT travel reimbursement, you must use the hotel block to be reimbursed for lodging.**
 
