--- a/src/content/workshop.mdx
+++ b/src/content/workshop.mdx
@@ -17,3 +17,11 @@ Learn about the KNIT 11 speakers and their expertise in networking, computing, a
 <div class="button-container">
 <Button linkto="https://docs.google.com/document/d/1NgnfA4ywF_NN1RiZpyen-CWtiDbt-m8hS9wCSUhCIQ0/edit?tab=t.0">Speaker Directory</Button>
 </div>
+
+## Workshop Notes
+
+The Workshop Notes document is open throughout the KNIT Workshop for you to share insights as a FABRIC user. Use it to provide feedback, suggest features, and highlight what you’d like to see from FABRIC. This document will be available through <b>October 31, 2025</b>.
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/document/d/12I3XElPc_rgJ4M5WVhVojuSg0qTU13RASmCC8hUL94g/edit?usp=sharing">Workshop Notes</Button>
+</div>
