--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -30,8 +30,4 @@ Visit the hotel link and type in the offer code **BKG311** to access the KNIT bl
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-**The deadline for applications is Friday August 29 @ 11:59 PM ET**
-
-<div class="button-container">
-<Button linkto="https://docs.google.com/forms/d/1cj-fh51Og9yWQo83RAALcA2wdyUW7HZzxsj79--lzdQ/viewform?edit_requested=true">Apply Now!</Button>
-</div>
+**The KNIT 11 Travel Stipend Application is now closed.**
