--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -6,9 +6,7 @@ import { Button } from '../components/button'
 
 Showcase your innovative projects at KNIT's Demo Night! Share the work you've been developing by filling out the form to be considered for a presentation. 
 
-<div class="button-container">
-<Button linkto="https://docs.google.com/forms/d/1UVtaiiB8UgciahOKB7ExxhGjptfal65YdVkOVzp55CU/viewform?edit_requested=true">Demo Night Form</Button>
-</div>
+<b>The KNIT 11 Demo Night Form is now closed.</b>
 
 
 For more questions, email [Chelsea Davis](mailto:cdavis@renci.org)
