updated bold text color to blue

--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -6,7 +6,7 @@ import { Button } from '../components/button'
 
 Showcase your innovative projects at KNIT's Demo Night! Share the work you've been developing by filling out the form to be considered for a presentation. 
 
-<b>The KNIT 11 Demo Night Form is now closed.</b>
+**The KNIT 11 Demo Night Form is now closed.**
 
 
 For more questions, email [Chelsea Davis](mailto:cdavis@renci.org)
