#95: updated knit 11 content

--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -2,9 +2,9 @@ import { Button } from "../components/button";
 
 # KNIT 11 | October 14-15, 2025
 
-Join us for KNIT 11, the next FABRIC Community Workshop, taking place October 14-15, 2025!
+Thanks for attending KNIT 11, the FABRIC Community Workshop, which took place October 14-15, 2025!
 
-This engaging two-day event offers a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
+This engaging two-day event offered a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
 
 **Event Highlights:**
 
@@ -13,12 +13,6 @@ This engaging two-day event offers a dynamic mix of activities designed to deepe
 - Plenary Sessions: Gain insights from expert presentations and open discussions.
 - Experiment Showcases: Discover how scientists from diverse fields are leveraging FABRIC to drive groundbreaking research.
 - Open Mic Sessions: Share your feedback and ideas to shape FABRIC's future development.
-
-Don't miss this chance to explore practical applications, network with the community, and be part of the evolution of FABRIC!
-
-<div class="button-container">
-<Button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=C954">Register Now</Button>
-</div>
 
 ## Event Venue
 
