#97: added agenda for KNIT 9 and KNIT 10

--- a/src/content/past-knits/knit9.mdx
+++ b/src/content/past-knits/knit9.mdx
@@ -29,8 +29,14 @@ The KNIT 9 Information Packet serves as your one-stop-shop for all links and mat
 
 ## Agenda
 
-<div class="button-container">
-  <Button linkto="https://docs.google.com/document/d/1br31OkgPGS_75dzI7xZE9e2AVOQbWqo5lyFbT-7YMhM/preview">KNIT9 Information Packet</Button>
+<div style={{ width: "800px", margin: "0 auto", overflowX: "auto" }}>
+  <iframe
+    src="https://docs.google.com/document/d/e/2PACX-1vRFK-jWaE1sajkhAzhKcPO3gxVXcVkeShn4WdH06OPe1cNokut4_U81_JZxefyoFax6amlGTHKJQIep/pub?embedded=true"
+    width="800"
+    height="3610"
+    style={{ border: "none" }}
+    loading="lazy"
+  />
 </div>
 
 ##### Funding Details
