--- a/src/content/past-knits/knit10.mdx
+++ b/src/content/past-knits/knit10.mdx
@@ -52,6 +52,18 @@ Presenters who choose to share their presentations and resources publicly will h
   <Button linkto="https://drive.google.com/drive/folders/1Ki3RHiTp7X1UhYeQ-qr48io5exiclNp6">Presentation Folder</Button>
 </div>
 
+## Agenda
+
+<div style={{ width: "800px", margin: "0 auto", overflowX: "auto" }}>
+  <iframe
+    src="https://docs.google.com/document/d/e/2PACX-1vS9cX7THv3GkdzV1DYYHeWgwa63NiiNowZKvI4z-knmn-CMaLIUWyhplQ1cCjMWreFR8C2ii4WdCX91/pub?embedded=true"
+    width="800"
+    height="7000"
+    style={{ border: "none" }}
+    loading="lazy"
+  />
+</div>
+
 ##### Funding Details
 
 FABRIC is funded by NSF grants CNS-1935966, CNS-2029176, CNS-2029200, CNS-2029235, CNS-2029260, CNS-2029261 and CNS-2330891.
