#101: updated knit website main content to KNIT 12

--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -4,9 +4,6 @@ import { Button } from '../components/button'
 
 ## Calls for Demos 
 
-Showcase your innovative projects at KNIT's Demo Night! Share the work you've been developing by filling out the form to be considered for a presentation. 
-
-**The KNIT 11 Demo Night Form is now closed.**
-
+_More information coming soon._
 
 For more questions, email [Chelsea Davis](mailto:cdavis@renci.org)
