--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -1,26 +1,20 @@
 import { Button } from "../components/button";
 
-# KNIT 11 | October 14-15, 2025
+# KNIT 12 | April 14-17, 2026
 
-Thanks for attending KNIT 11, the FABRIC Community Workshop, which took place October 14-15, 2025!
+Join us for KNIT12, the next FABRIC Community Workshop, April 14-17, 2025, in Hawaii!
 
-This engaging two-day event offered a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
+This engaging event offers a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
 
 **Event Highlights:**
 
-- Hands-On FABRIC Tutorials: Participate in small-group sessions tailored for both newcomers and experienced users.
+- Hands-On FABRIC Tutorials: Participate in small-group sessions for newcomers and experienced users.
 - Advanced Training Topics: Explore in-depth technical content to enhance your expertise.
 - Plenary Sessions: Gain insights from expert presentations and open discussions.
-- Experiment Showcases: Discover how scientists from diverse fields are leveraging FABRIC to drive groundbreaking research.
-- Open Mic Sessions: Share your feedback and ideas to shape FABRIC's future development.
+- Experiment Showcases: Discover how scientists from diverse fields leverage FABRIC to drive groundbreaking research.
+- Open Mic Sessions: Share your feedback and ideas to shape FABRIC’s future development.
 
-## Event Venue
-
-> University Guest House & Conference Center
-
-> 100 South Fort Douglas Blvd.
-
-> Salt Lake City, UT 84113
+Don’t miss this chance to explore practical applications, network with the community, and be part of the evolution of FABRIC!
 
 --- 
 
