--- a/src/content/registration.mdx
+++ b/src/content/registration.mdx
@@ -4,15 +4,15 @@ import { Button } from '../components/button'
 
 ## When
 
-- Workshop: FABRIC KNIT | October 14-15, 2025
+- Workshop: FABRIC KNIT 12 | April 14-17, 2026
 
 ## Where
 
-> University Guest House & Conference Center
+> University of Hawaii Manoa
 
-> 100 South Fort Douglas Blvd.
+> 2520 Correa Rd.
 
-> Salt Lake City, UT 84113
+> Honolulu, HI 96822
 
 ## Cost
 
@@ -20,8 +20,14 @@ import { Button } from '../components/button'
 - Student: $100
 - Previous KNIT attendee: $150
 
+## Hotel
+
+_Information coming soon._
+
 ## Travel Stipend
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-**The KNIT 11 Travel Stipend Application is now closed.**
+<div class="button-container">
+<Button linkto="https://docs.google.com/forms/d/e/1FAIpQLSd7UsPby5Cw0kRSXNROlllrslPDvCMk3A93w0ijJt1SewaIHA/viewform">Travel Stipent Application</Button>
+</div>
