--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -4,26 +4,20 @@ import { Button } from '../components/button'
 
 ## Event Location
 
-> University Guest House & Conference Center
+> University of Hawaii Manoa
 
-> 100 South Fort Douglas Blvd.
+> 2520 Correa Rd.
 
-> Salt Lake City, UT 84113
+> Honolulu, HI 96822
 
 ## Hotel Block
 
-> University Guest House & Conference Center
-
-> 100 South Fort Douglas Blvd.
-
-> Salt Lake City, UT 84113
-
-Visit the hotel link and type in the offer code **BKG311** to access the KNIT block. <b>The deadline to book within the hotel block is September 14.</b>
-
-**Please note: If you have been approved for a KNIT travel reimbursement, you must use the hotel block to be reimbursed for lodging.**
+_Information coming soon._
 
 ## Travel Stipend
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-**The KNIT 11 Travel Stipend Application is now closed.**
+<div class="button-container">
+<Button linkto="https://docs.google.com/forms/d/e/1FAIpQLSd7UsPby5Cw0kRSXNROlllrslPDvCMk3A93w0ijJt1SewaIHA/viewform">Travel Stipent Application</Button>
+</div>
