#101: updated homepage and call for actions page

--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -2,6 +2,14 @@ import { Button } from '../components/button'
 
 # Calls for Action  
 
+## Golden Stitch Award
+
+FABRIC is now accepting nominations for the 2026 Golden Stitch Awards, recognizing outstanding research, experimentation, and teaching using FABRIC resources. Community members can nominate themselves or colleagues for categories including Best Published Paper, Best FABRIC Matrix, Best Experiment, and Best Classroom Use through March 31, 2026. Winners will be announced at KNIT12 and featured in a FABRIC blog post.
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/forms/d/e/1FAIpQLScRkbVGfMQ-9kOCUQKDVFp0djzrY2f2wA8G3M4X_8wxBoATOg/viewform?usp=sharing&ouid=104512725601461340103">FABRIC Awards Nomination Form</Button>
+</div>
+
 ## Calls for Demos 
 
 _More information coming soon._
