--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -16,6 +16,22 @@ This engaging event offers a dynamic mix of activities designed to deepen your k
 
 Don’t miss this chance to explore practical applications, network with the community, and be part of the evolution of FABRIC!
 
+## Event Venue
+
+> University of Hawaii Manoa
+
+> 2520 Correa Rd.
+
+> Honolulu, HI 96822
+
+--- 
+
+FABRIC is now accepting nominations for the 2026 Golden Stitch Awards, recognizing outstanding research, experimentation, and teaching using FABRIC resources. Community members can nominate themselves or colleagues for categories including Best Published Paper, Best FABRIC Matrix, Best Experiment, and Best Classroom Use through March 31, 2026. Winners will be announced at KNIT12 and featured in a FABRIC blog post.
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/forms/d/e/1FAIpQLScRkbVGfMQ-9kOCUQKDVFp0djzrY2f2wA8G3M4X_8wxBoATOg/viewform?usp=sharing&ouid=104512725601461340103">FABRIC Awards Nomination Form</Button>
+</div>
+
 --- 
 
 ##### Funding Details
