#104: updated homepage and call for action page

--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -12,6 +12,10 @@ FABRIC is now accepting nominations for the 2026 Golden Stitch Awards, recognizi
 
 ## Calls for Demos 
 
-_More information coming soon._
+Showcase your innovative projects at KNIT12's Demo Night! Share the work you've been developing by filling out the form to be considered for a presentation.
+
+<div class="button-container">
+<Button linkto="https://forms.gle/PW8v9NdJNqAcRbhv9">Demo Night Signup Form</Button>
+</div>
 
 For more questions, email [Chelsea Davis](mailto:cdavis@renci.org)
