--- a/src/content/home.mdx
+++ b/src/content/home.mdx
@@ -6,6 +6,11 @@ Join us for KNIT12, the next FABRIC Community Workshop, April 14-17, 2026, in Ha
 
 This engaging event offers a dynamic mix of activities designed to deepen your knowledge of FABRIC, connect with fellow researchers, and contribute to the future of this innovative platform.
 
+<div class="button-container">
+<Button linkto="https://apps2.research.unc.edu/events/index.cfm?event=events.go&key=CBD5">Registration</Button>
+</div>
+
+
 **Event Highlights:**
 
 - Hands-On FABRIC Tutorials: Participate in small-group sessions for newcomers and experienced users.
