#103: added hotel information

--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -12,7 +12,17 @@ import { Button } from '../components/button'
 
 ## Hotel Block
 
-_Information coming soon._
+> Kaimanna Beach Hotel
+
+> 2863 Kalākaua Ave
+
+> Honolulu, HI 96815
+
+Be sure to use the promo code **PRCUH** when booking your stay at the Kaimana Beach Hotel to receive the discounted group rate. Please note that the hotel applies additional taxes and a nightly resort fee, which are not included in the discounted rate. This promo code is only available for a limited number of rooms, so we encourage you to book early to secure your spot.
+
+<div class="button-container">
+<Button linkto="https://www.kaimana.com/?utm_source=google-gbp&utm_medium=organic&utm_campaign=gbp">Hotel Website</Button>
+</div>
 
 ## Travel Stipend
 
