#110: updated calls for action page

--- a/src/content/cfp.mdx
+++ b/src/content/cfp.mdx
@@ -2,15 +2,23 @@ import { Button } from '../components/button'
 
 # Calls for Action  
 
+## Call for Talks
+
+KNIT12 invites participants to share talks on experimentation across scientific domains, getting started with FABRIC, and innovative uses of FABRIC and other testbeds. Speakers are encouraged to showcase active experiments with live views of slices, resources, and results, or propose new ideas with clearly defined workflows and resource needs. This is a great opportunity to highlight your work, exchange insights, and contribute to the growing FABRIC community. Please complete this form by <b>February 27, 2026</b> if you are interested in presenting  at KNIT12.
+
+<div class="button-container">
+<Button linkto="https://docs.google.com/forms/d/19-n5GJ5p6bWg5N8F6XXuCRcx8kMlQbOtuIryNUSatwU/preview">Talk Submission Form</Button>
+</div>
+
 ## Golden Stitch Award
 
-FABRIC is now accepting nominations for the 2026 Golden Stitch Awards, recognizing outstanding research, experimentation, and teaching using FABRIC resources. Community members can nominate themselves or colleagues for categories including Best Published Paper, Best FABRIC Matrix, Best Experiment, and Best Classroom Use through March 31, 2026. Winners will be announced at KNIT12 and featured in a FABRIC blog post.
+FABRIC is now accepting nominations for the 2026 Golden Stitch Awards, recognizing outstanding research, experimentation, and teaching using FABRIC resources. Community members can nominate themselves or colleagues for categories including Best Published Paper, Best FABRIC Matrix, Best Experiment, and Best Classroom Use through <b>March 31, 2026</b>. Winners will be announced at KNIT12 and featured in a FABRIC blog post.
 
 <div class="button-container">
 <Button linkto="https://docs.google.com/forms/d/e/1FAIpQLScRkbVGfMQ-9kOCUQKDVFp0djzrY2f2wA8G3M4X_8wxBoATOg/viewform?usp=sharing&ouid=104512725601461340103">FABRIC Awards Nomination Form</Button>
 </div>
 
-## Calls for Demos 
+## Call for Demos 
 
 Showcase your innovative projects at KNIT12's Demo Night! Share the work you've been developing by filling out the form to be considered for a presentation.
 
