#112: updated knit 12 registration/ travel/ workshop materials tab

--- a/src/content/travel.mdx
+++ b/src/content/travel.mdx
@@ -28,6 +28,4 @@ Be sure to use the promo code **PRCUH** when booking your stay at the Kaimana Be
 
 The purpose of the travel grant reimbursement is to increase the diversity of conference attendees from a wide range of institutions and organizations, and most importantly to provide opportunities for attendees to contribute ideas, share expertise, and receive training that will stimulate successful FABRIC experiments that can lead to important scientific impacts in a diverse range of science domains.
 
-<div class="button-container">
-<Button linkto="https://docs.google.com/forms/d/e/1FAIpQLSd7UsPby5Cw0kRSXNROlllrslPDvCMk3A93w0ijJt1SewaIHA/viewform">Travel Stipent Application</Button>
-</div>
+**Travel Application is Closed.**
