--- a/src/content/workshop.mdx
+++ b/src/content/workshop.mdx
@@ -18,4 +18,6 @@ _Link with more information coming soon._
 
 The Workshop Notes document is open throughout the KNIT Workshop for you to share insights as a FABRIC user. Use it to provide feedback, suggest features, and highlight what you’d like to see from FABRIC.
 
-_Link with more information coming soon._
+<div class="button-container">
+<Button linkto="https://docs.google.com/document/d/18j20ywPDIQcS5lSW7E6uwKfjaFfl9dsduasSvreySAQ/edit?usp=sharing">Workshop Materials</Button>
+</div>
